[project]
name = "speedup.py"
version = "0.0.2"
authors = [{ name = "trustytrojan" }]
description = "A simple script to speedup your music/audio"
requires-python = ">=3.11"
keywords = ["music", "audio", "speed", "speed up", "speedup"]
dependencies = ["scipy", "soundfile", "sounddevice"]

[project.urls]
GitHub = "https://github.com/trustytrojan/speedup.py"

[project.scripts]
speedup = "speedup:main"
